@@ -1,3 +1,8 @@
+2011-12-26 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCralloc.hpp:
+	  Reduce stack space usage in recursion.
+
 2011-12-25 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/lib/r2k/setjmp.s,
